--- a/css/style.scss
+++ b/css/style.scss
@@ -1,30 +1,99 @@
 /****** General ***********/
+// Variables
+$background-color:#F6F6F6; /* fonds gris */
+$greenligth-color: #99E2D0;  /* vert clair */
+$green-color: #008766;   /* vert foncé */
+$blueligth-color: #89C8FA;  /* bleu clair */
+$blue-color: #003A68;   /* bleu foncé */
+$mauve-color: #9356DC;   /* mauve */
+$mauve-second-color: #FF79DA;   /* mauve */
+$grey-color: #353535;   /* gris-clair */
+$greyligth-color: #EAEAEA;   /* gris-clair */
+
+
 * {
     font-family: 'Roboto';
 }
 
-:root {
-    --main-grl-color: #99E2D0;  /* vert clair */
-    --main-gr-color: #008766;   /* vert foncé */
-    --main-bll-color: #89C8FA;  /* bleu clair */
-    --main-bl-color: #003A68;   /* bleu foncé */
-    --main-mv-color: #9356DC;   /* mauve */
+.text-16-medium{
+    font-size: 16px;
+    font-weight:500;
+    text-decoration: none;
+}
+
+.text-18-ligth{
+    font-size: 18px;
+    font-weight:300;
+}
+
+h2 {
+    font-size: 24px;
+    font-weight:bold;
 }
 
 body {
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
-    margin-top:0px ;
+    margin-top: 0px;
+    background-color: $background-color;
 }
 
-h1 {
-    font-family: 'Shrikhand', sans-serif;
-    font-size: 30px;
-    font-weight: bold;
+.entete {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    .entete__titre {
+        height: 63px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        background-color: white;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        font-family: 'Shrikhand', sans-serif;
+        font-size: 30px;
+        font-weight: bold;
+    }
+    .entete__localisation{
+        height: 50px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 19px;
+        background-color: $greyligth-color;
+        filter:drop-shadow(0px 4px 4px rgb(75%,75%,75%));
+    }
+}
+.entete_restaurants {
+    width: 84%;
+    margin-left: 8%;
+    margin-right: 8%;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
-h2 {
-    font-size: 18px;
-    font-weight: bold;
+
+.button {
+    height: 50px;
+    width: 218px;
+    margin-top: 27px;
+    margin-bottom: 57px;
+	border-style: none;
+    color:  white;
+	background:linear-gradient(to bottom right, $mauve-second-color,$mauve-color);
+    border-radius: 25px;
+	box-sizing: border-box;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+    filter:drop-shadow(0px 4px 4px rgb(75%,75%,75%));
 }
+
