--- a/css/style.scss
+++ b/css/style.scss
@@ -27,6 +27,14 @@ a {
     text-decoration: none;
 }
 
+h2,
+h3 {
+    font-size: 24px;
+    font-weight: bold;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
 .text-16 {
     font-size: 16px;
     text-decoration: none;
@@ -76,24 +84,14 @@ a {
     }
 }
 
-h1,
-h2,
-h3 {
-    font-size: 24px;
-    font-weight: bold;
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
-
 body {
     max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 0px;
-    background-color: $background-color;
 }
 
-/* Header */
+/*** HEADER ***/
 header {
     position: relative;
     background-color: white;
@@ -112,6 +110,9 @@ header {
 }
 
 /* MAIN */
+main{
+    background-color: $background-color;
+}
 .localisation {
     width: 100%;
     height: 50px;
@@ -254,7 +255,6 @@ input[type='text'] {
 .section_restaurants {
     box-sizing: border-box;
     width: 100%;
-
     .section_restaurants__titre {
         margin-left: 20px;
     }
@@ -268,12 +268,6 @@ input[type='text'] {
     margin-left: 2%;
     gap: 18px;
 }
-
-/*.section_restaurants_cartes__lien {
-    justify-content: stretch;
-    text-decoration: none;
-    margin-left: 100px;
-}*/
 
 .carte_restaurant {
     background-color: white;
@@ -372,3 +366,34 @@ input[type='text'] {
         }
     }
 }
+/*** FOOTER ***/
+.footer_bloc {
+	background-color:$grey-color;
+	color: White;
+    padding: 22px 25px 22px 25px;
+    display: flex;
+    flex-direction: column;
+    .footer__titre {
+        font-family: 'shrikhand';
+        font-size: 18px;
+        font-weight: 400;
+        margin:0px 0px 26px 0px;
+    }
+    .footer__mentions{
+        display: flex;
+        flex-direction: column;
+        gap:11px;
+    }
+    .footer__lien {
+        align-items: center;
+        display: flex;
+        flex-direction: row;
+        gap:11px;
+        color: white;
+        font-weight: 300;
+        .footer__lien__texte {
+            margin:0px;
+        }
+    }
+}
+
