--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,8 @@ h3 {
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: spin-fade-out 0s 3s forwards;
-  z-index: 999;
+  animation: spin-fade-out 0s 0.1s forwards;
+  z-index: 9;
 }
 
 .loader {
@@ -95,7 +95,7 @@ h3 {
   width: 105px;
   height: 105px;
   color: #9356dc;
-  animation: 2000ms spin2 linear infinite;
+  animation: 1500ms spin2 linear infinite;
 }
 
 .loader::before {
@@ -122,7 +122,7 @@ h3 {
     transform: rotate(0deg);
   }
   100% {
-    transform: rotate(360deg);
+    transform: rotate(180deg);
   }
 }
 @keyframes spin-fade-out {
@@ -239,6 +239,11 @@ input[type=text] {
   margin-top: 26px;
   gap: 25px;
 }
+@media (min-width: 768px) {
+  .fonctionnement .fonctionnement_bar {
+    flex-direction: row;
+  }
+}
 .fonctionnement .fonctionnement_bar .fonctionnement_bar_etape {
   position: relative;
   padding-left: 12px;
@@ -294,11 +299,16 @@ input[type=text] {
 .restaurants {
   width: 100%;
   max-width: 1440px;
-  padding: 59px 0px;
+  padding: 59px 0px 66px 0px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+@media (min-width: 768px) {
+  .restaurants {
+    padding: 30px 0px 30px 0px;
+  }
 }
 
 .section_restaurants {
@@ -306,16 +316,28 @@ input[type=text] {
   width: 100%;
 }
 .section_restaurants .section_restaurants__titre {
-  margin-left: 20px;
+  margin-left: 2%;
+}
+@media (min-width: 768px) {
+  .section_restaurants .section_restaurants__titre {
+    margin-left: 12.5%;
+  }
 }
 
 .section_restaurants_cartes {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 96%;
   margin-left: 2%;
-  gap: 18px;
+  width: 96%;
+}
+@media (min-width: 768px) {
+  .section_restaurants_cartes {
+    flex-direction: row;
+    margin-left: 12.5%;
+    width: 75%;
+    gap: 7%;
+  }
 }
 
 .carte_restaurant {
@@ -325,9 +347,10 @@ input[type=text] {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 15px;
+  /*margin-top: 15px;*/
   width: 100%;
   height: 251px;
+  margin-top: 18px;
 }
 
 .carte_restaurant__nouveau {
@@ -357,7 +380,7 @@ input[type=text] {
 }
 
 .carte_restaurant_bas {
-  width: 100%;
+  width: 96%;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -422,25 +445,46 @@ input[type=text] {
   display: flex;
   flex-direction: column;
 }
+@media (min-width: 768px) {
+  .footer_bloc {
+    flex-direction: row-reverse;
+  }
+}
 .footer_bloc .footer__titre {
   font-family: "shrikhand";
   font-size: 18px;
   font-weight: 400;
   margin: 0px 0px 26px 0px;
 }
+@media (min-width: 768px) {
+  .footer_bloc .footer__titre {
+    margin: 0px 20px 0px 50px;
+  }
+}
 .footer_bloc .footer__mentions {
   display: flex;
   flex-direction: column;
   gap: 11px;
 }
+@media (min-width: 768px) {
+  .footer_bloc .footer__mentions {
+    flex-direction: row;
+  }
+}
 .footer_bloc .footer__lien {
   align-items: center;
   display: flex;
   flex-direction: row;
+  font-size: 16px;
   gap: 11px;
   color: white;
   font-weight: 300;
 }
 .footer_bloc .footer__lien .footer__lien__texte {
   margin: 0px;
+}
+@media (min-width: 768px) {
+  .footer_bloc .footer__txt_ss_logo {
+    margin-left: 20px;
+  }
 }/*# sourceMappingURL=style.css.map */
