--- a/css/style.scss
+++ b/css/style.scss
@@ -73,7 +73,7 @@ h3 {
     display: flex;
     align-items: center;
     justify-content: center;
-    animation: spin-fade-out 0s 0.1s forwards;
+    animation: spin-fade-out 0s 3s forwards;
     z-index: 9;
   }
     .loader{
@@ -87,10 +87,13 @@ h3 {
     justify-content: center;
   }
   .tour-eiffel {
-    width:105px;
-    height: 105px;
+    width:110px;
+    height: 110px;
     color:#9356dc;
-    animation: 1500ms spin2 linear infinite;
+    position:relative;
+    left:-53px;
+    top:-2px;
+    /*animation: 1500ms spin2 linear infinite;*/
   }
   .loader::before{
     width: 100px;
