--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,8 @@ h3 {
 }
 
 .loader {
+  position: relative;
+  left: 50px;
   width: 100px;
   height: 100px;
   border-top: 5px solid #9356DC;
@@ -96,7 +98,7 @@ h3 {
   height: 110px;
   color: #9356dc;
   position: relative;
-  left: -53px;
+  left: -27px;
   top: -2px;
   /*animation: 1500ms spin2 linear infinite;*/
 }
@@ -153,17 +155,26 @@ body {
 }
 
 /*** HEADER ***/
-header {
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   background-color: white;
   width: 100%;
   height: 63px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
 }
-header .entete__logo {
+.navbar .navbar__bouton-retour {
+  position: absolute;
+  font-size: 25px;
+  left: 23px;
+  color: black;
+}
+.navbar .navbar__bouton-retour.hide_page_index {
+  display: none;
+}
+.navbar .entete__logo {
   display: block;
   height: 30px;
   width: 162px;
@@ -242,7 +253,7 @@ input[type=text] {
   margin-top: 26px;
   gap: 25px;
 }
-@media (min-width: 768px) {
+@media (min-width: 767.99px) {
   .fonctionnement .fonctionnement_bar {
     flex-direction: row;
   }
@@ -281,9 +292,10 @@ input[type=text] {
   gap: 27px;
   color: #7E7E7E;
   z-index: 0;
+  filter: brightness(98%);
 }
 .fonctionnement .fonctionnement_bar .fonctionnement_bar_etape .fonctionnement_bar_etape__bouton:hover {
-  filter: brightness(1, 1);
+  filter: brightness(100%);
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.5);
 }
 .fonctionnement .fonctionnement_bar .fonctionnement_bar_etape .fonctionnement_bar_etape__bouton:hover .fonctionnement_bar_etape_bouton__logo {
