--- a/css/style.scss
+++ b/css/style.scss
@@ -77,6 +77,8 @@ h3 {
     z-index: 9;
   }
     .loader{
+    position:relative;
+    left:50px;
     width: 100px;
     height: 100px;
     border-top: 5px solid $mauve-color;
@@ -91,7 +93,7 @@ h3 {
     height: 110px;
     color:#9356dc;
     position:relative;
-    left:-53px;
+    left:-27px;
     top:-2px;
     /*animation: 1500ms spin2 linear infinite;*/
   }
@@ -132,15 +134,24 @@ body {
 }
 
 /*** HEADER ***/
-header {
-    position: relative;
-    background-color: white;
-    width: 100%;
-    height: 63px;
+.navbar {
     display: flex;
     justify-content: center;
     align-items: center;
+    position:relative;
+    background-color: white;
+    width: 100%;
+    height: 63px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+    .navbar__bouton-retour {
+        position:absolute;
+        font-size: 25px;
+        left:23px;
+        color: black;
+        &.hide_page_index{
+            display:none;
+        }
+    }
 
     .entete__logo {
         display: block;
@@ -223,7 +234,7 @@ input[type='text'] {
         align-items: center;
         margin-top: 26px;
         gap: 25px;
-        @media (min-width: 768px) {
+        @media (min-width: 767.99px) {
             flex-direction: row;
         }
 
@@ -263,8 +274,9 @@ input[type='text'] {
                 gap: 27px;
                 color: #7E7E7E;
                 z-index: 0;
+                filter:brightness(98%);
                 &:hover{
-                    filter: brightness(1, 1);
+                    filter: brightness(100%);
                     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.5);
                     .fonctionnement_bar_etape_bouton__logo {
                         color: $mauve-color;
